# vibebot-v8

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  vibebot-updater.service  vibebot-updater.timer  vibebot.service
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml
docs/plans/: 2025-12-18-prompt-injection-defense-design.md
docs/reviews/: llm-plugin-review.md  tooling-review.md
plugins/llm/: README.md  pyproject.toml
plugins/llm/locales/: de.po  fi.po  fr.po  it.po  messages.pot  nl.po  ru.po
plugins/llm/src/llm/: __init__.py  config.py  context.py  plugin.py  rate_limiter.py  service.py
plugins/llm/tests/: __init__.py  conftest.py  test_config.py  test_context.py  test_etiquette.py  test_plugin.py  test_rate_limiter.py  test_service.py
scripts/: pre-commit
