[project]
name = "llm"
version = "0.1.0"
description = "LiteLLM-powered AI commands for IRC bot"
requires-python = ">=3.14"
dependencies = [
    "limnoria>=2023.1.20",
    "litellm>=1.55.0",
    "aiohttp>=3.9.0",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a8",
]

[project.entry-points."limnoria.plugins"]
LLM = "llm"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]
